--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,87 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+@keyframes arrow {
+    from {
+        transform: translate(0);
+    }
+    to {
+        transform: translate(4px);
+    }
+}
+
+@keyframes icon-scale {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.5);
+    }
+}
+
+@keyframes icon-sparks {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.like-icon .core {
+    fill: transparent;
+    transition: fill 0.3s linear 0.03s;
+}
+
+.like-icon .main-body {
+    fill: transparent;
+    transition: fill 0.3s linear;
+}
+
+.like-icon .heart {
+    transform-origin: center;
+}
+
+.like-icon:hover .core {
+    fill: var(--color-accent);
+    transition: fill 0.3s linear;
+}
+
+.like-icon:hover .main-body {
+    fill: var(--color-accent);
+    transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon:active .core {
+    fill: var(--color-liked);
+    transition: fill 0.3s linear;
+}
+
+.like-icon:active .main-body {
+    fill: var(--color-liked);
+    transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .core {
+    fill: var(--color-liked);
+    transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+    fill: var(--color-liked);
+    transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .contour {
+    fill: var(--color-liked);
+    transition: fill 0.3s linear 0.06s;
+}
+
+.like-icon.is-liked .heart {
+    animation: icon-scale 0.3s ease-in 0.1s alternate;
+}
+
+.like-icon.is-liked .sparks {
+    animation: icon-sparks 0.3s ease-in 0.3s alternate;
+}
