--- a/styles/style.css
+++ b/styles/style.css
@@ -17,4 +17,400 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  max-inline-size: 1440px;
+  font-family: var(--font-family-main, sans-serif);
+  font-variation-settings: var(--font-weight-text);
+  background-color: var(--bg-color, #fff);
+  color: var(--color-main, #000);
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-attachment: fixed;
+  display: flex;
+  flex-direction: column;
+  padding: 100px 0;
+  margin: auto;
+}
+
+.header {
+  inline-size: min(100%, 700px);
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  border: var(--border);
+  background-color: var(--bg-color);
+}
+
+.header__title {
+  font-family: var(--font-family-accent, sans-serif);
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  text-transform: uppercase;
+  text-align: center;
+  padding-block-start: 136px;
+}
+
+@media (max-width: 376px) {
+  .header__title {
+    padding-block-start: 120px;
+  }
+}
+
+.header__subtitle {
+  font-family: var(--font-family-accent, sans-serif);
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-transform: uppercase;
+  text-align: center;
+  padding-block-start: 20px;
+}
+
+.header__theme-menu {
+  display: flex;
+  justify-content: center;
+  padding: 23px 0 27px;
+}
+
+.theme-menu__list {
+  display: grid;
+  grid-template-rows: repeat(3, min-content);
+  gap: 14px;
+}
+
+.theme-menu__item {
+  position: relative;
+  max-block-size: 14px;
+}
+
+.theme-menu__button {
+  background-color: transparent;
+  border: none;
+  font-family: var(--font-family-accent, sans-serif);
+  font-size: 14px;
+  text-transform: uppercase;
+  cursor: pointer;
+  padding: 0 0 0 16px;
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+  transition: 0.3s ease;
+}
+
+.theme-menu__button:focus {
+  opacity: 0.6;
+  outline: none;
+}
+
+.theme-menu__button::after {
+  content: '';
+  display: block;
+  width: 0%;
+  block-size: 2px;
+  background-color: var(--color-accent);
+  opacity: 0.6;
+  transition: width 0.3s ease;
+}
+
+.theme-menu__button:focus-visible::after {
+  width: 100%;
+}
+
+.theme-menu__button:disabled::before {
+  content: '▶';
+  position: absolute;
+  inset-inline-start: -10px;
+  inset-block-start: 2px;
+  opacity: 0.6;
+  animation: arrow 0.5s ease-in-out infinite alternate;
+}
+
+.content {
+  padding: 100px 0 50px;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  align-items: center;
+}
+
+.cards-list {
+  inline-size: min(100%, 700px);
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+
+/* .cards-item {
+  inline-size: min(100%, 700px);
+} */
+
+.card {
+  background-color: var(--bg-color);
+  border: var(--border);
+}
+
+.card__title {
+  font-size: 18px;
+  font-weight: var(--font-weight-title);
+  padding: 5px 0px 5px 10px;
+  border-block-end: var(--border);
+}
+
+.card__image-container {
+  position: relative;
+}
+
+.card__image {
+  display: block;
+  object-fit: cover;
+  background-size: cover;
+  background-blend-mode: hard-light;
+  inline-size: 100%;
+  object-position: center;
+}
+
+.card__label {
+  position: absolute;
+  inset-block-start: 25px;
+  inset-inline-end: 25px;
+  color: var(--color-main);
+  font-family: var(--font-family-accent);
+  font-size: 14px;
+  text-transform: uppercase;
+  opacity: 0.5;
+  text-shadow: -1px 0 var(--text-contour), 0 1px var(--text-contour), 1px 0 var(--text-contour), 0 -1px var(--text-contour);
+}
+
+@supports (-webkit-text-stroke: 1px var(--text-contour)) {
+  .card__label {
+    -webkit-text-stroke: 1px var(--text-contour);
+    text-shadow: none;
+  }
+}
+
+@media (max-width: 376px) {
+  .card__label {
+    inset-inline-end: 11px;
+  }
+}
+
+.card__text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 27px;
+  padding: 25px;
+  border-block-start: var(--border);
+}
+
+.card__text {
+  font-size: 18px;
+}
+
+.card__button-container {
+  display: flex;
+  padding: 0 25px 25px;
+  justify-content: flex-end;
+  gap: 4px;
+}
+
+.card__icon-button {
+  display: flex;
+  background-color: transparent;
+  padding: 0;
+  border: 2px solid transparent;
+  transition: border-color 0.3s ease;
+  cursor: pointer;
+  block-size: 38px;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border-color: var(--color-accent);
+}
+
+.like-icon {
+  /* inline-size: 100%;
+  block-size: 100%; */
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.button {
+  background-color: var(--bg-color);
+  border: var(--border);
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+  appearance: none;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  box-shadow: 2px 2px 0px 0px var(--color-accent);
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  inline-size: 100%;
+  block-size: 100%;
+  background-color: var(--color-main);
+  transition: transform 0.5s ease-in-out;
+  transform: translateX(-100%);
+}
+
+.button:hover::before {
+  transform: translateX(0);
+}
+
+.button__text {
+  position: relative;
+  font-family: var(--font-family-accent);
+  font-size: 14px;
+  line-height: 90%;
+  color: var(--text-contour);
+  transition: color 0.5s ease-in-out;
+  mix-blend-mode: difference;
+}
+
+.card__like-button {
+  display: flex;
+  align-items: center;
+  padding-inline: 35px;
+  max-block-size: 38px;
+}
+
+.footer {
+  margin: auto;
+  inline-size: min(100%, 700px);
+  display: flex;
+  justify-content: center;
+}
+
+.footer__button {
+  padding: 0 20px;
+  display: grid;
+  grid-template-columns: 21px 266px;
+  grid-template-rows: 51px;
+  gap: 8px;
+  align-items: center;
+}
+
+@media (max-width: 376px) {
+  .footer__button {
+    padding: 15px 20px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 28px 1fr;
+    gap: 9px;
+  }
+}
+
+.button__icon {
+  inline-size: 100%;
+  block-size: 100%;
+  color: var(--text-contour);
+  transition: color 0.5s ease-in-out;
+  mix-blend-mode: difference;
+}
+
+.dialog {
+  position: fixed;
+  inset: 0;
+  display: grid;
+  /* grid-template-columns: 357px; */
+  gap: 30px;
+  background-color: var(--bg-color);
+  border: var(--border);
+  padding: 32px 30px 32px;
+  /* inline-size: 357px;
+  block-size: 193px; */
+}
+
+.dialog .button__text {
+  text-transform: uppercase;
+}
+
+.dialog:not([open]) {
+  pointer-events: none;
+  opacity: 0;
+}
+
+.dialog::backdrop {
+  opacity: 0.75;
+  background-color: #000;
+}
+
+.dialog__container {
+  display: grid;
+  grid-template-columns: 39px 234px;
+  gap: 20px;
+  align-items: center;
+  
+}
+
+.dialog__text {
+  color: var(--color-accent);
+  font-family: var(--font-family-accent);
+  font-size: 14px;
+  line-height: 150%;
+  text-transform: uppercase;
+}
+
+.dialog__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  inline-size: 100%;
+  padding: 11px 0 11px;
+}
+
+.brightness {
+  filter: brightness(200%);
+}
+
+.contrast {
+  filter: contrast(20%);
+}
+
+.blur {
+  filter: blur(0.5rem);
+}
+
+.opacity {
+  filter: opacity(0.8);
+}
+
+.grayscale {
+  filter: grayscale(0.8);
+}
+
+.saturate {
+  filter: saturate(158%);
+}
+
+.hue-rotate {
+  filter: hue-rotate(-90deg);
+}
+
+.sepia {
+  filter: sepia(80%) invert(0.7);
+}
+
+.image {
+  filter: invert(0.7);
+} 
+
+.image {
+  filter: drop-shadow(5px 15px 3px rgba(0, 0, 0, 0.8));
 }
