--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,50 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-dark {
+  --bg-color: #000;
+  --color-main: #00cc14;
+  --bg-image: repeating-linear-gradient(
+      to right,
+      #000 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #007f0c, #004306);
+  --border: 2px solid #00cc14;
+  --color-accent: #00cc14;
+  --text-contour: #00cc14;
+}
+
+:root.theme-light {
+  --bg-color: #fff;
+  --color-main: #000;
+  --bg-image: repeating-linear-gradient(
+      to right,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+  --border: 2px solid #000;
+  --color-accent: #000;
+  --text-contour: #fff;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg-color: #000;
+    --color-main: #00cc14;
+    --bg-image: repeating-linear-gradient(
+        to right,
+        #000 0 2px,
+        transparent 2px 4px
+      ),
+      repeating-linear-gradient(to bottom, #000 0 2px, transparent 2px 4px),
+      linear-gradient(to bottom, #007f0c, #004306);
+    --border: 2px solid #00cc14;
+    --color-accent: #00cc14;
+    --text-contour: #00cc14;
+  }
+}
