--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,21 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+
+:root {
+  --font-family-main: "Inter";
+  --font-family-accent: "PressStart2P";
+  --font-weight-title: 700;
+  --font-weight-text: 400;
+  --bg-color: #fff;
+  --color-main: #000;
+  --bg-image: repeating-linear-gradient(
+      to right,
+      #d3d3d3 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(to bottom, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+  --border: 2px solid #000;
+  --color-accent: #000;
+  --text-contour: #fff;
+  --color-liked: #FF0000;
+}
