--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,3 @@
-/* Здесь вы напишете основную часть стилей страницы.
-
-Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
-✦ theme-dark — класс тёмной темы
-✦ theme-light — класс светлой темы
-✦ like-icon — для svg-иконки анимированного сердца
-✦ card__like-button — для кнопки Like рядом с иконкой
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ card__icon-button — для кнопки, оборачивающей иконку
-✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
-✦ button__text — для обозначения текстового элемента внутри кнопки
-
-Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
-
-*/
-
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
@@ -105,7 +89,7 @@
 }
 
 .theme-menu__button::after {
-  content: '';
+  content: "";
   display: block;
   width: 0%;
   block-size: 2px;
@@ -119,7 +103,7 @@
 }
 
 .theme-menu__button:disabled::before {
-  content: '▶';
+  content: "▶";
   position: absolute;
   inset-inline-start: -10px;
   inset-block-start: 2px;
@@ -141,10 +125,6 @@
   flex-direction: column;
   gap: 50px;
 }
-
-/* .cards-item {
-  inline-size: min(100%, 700px);
-} */
 
 .card {
   background-color: var(--bg-color);
@@ -168,7 +148,9 @@
   background-size: cover;
   background-blend-mode: hard-light;
   inline-size: 100%;
+  block-size: 100%;
   object-position: center;
+  max-block-size: 1040px;
 }
 
 .card__label {
@@ -178,9 +160,10 @@
   color: var(--color-main);
   font-family: var(--font-family-accent);
   font-size: 14px;
-  text-transform: uppercase;
   opacity: 0.5;
-  text-shadow: -1px 0 var(--text-contour), 0 1px var(--text-contour), 1px 0 var(--text-contour), 0 -1px var(--text-contour);
+  text-shadow: -1px 0 var(--text-contour), 0 1px var(--text-contour),
+    1px 0 var(--text-contour), 0 -1px var(--text-contour);
+  mix-blend-mode: hard-light;
 }
 
 @supports (-webkit-text-stroke: 1px var(--text-contour)) {
@@ -231,11 +214,6 @@
 
 .card__icon-button:focus-visible {
   border-color: var(--color-accent);
-}
-
-.like-icon {
-  /* inline-size: 100%;
-  block-size: 100%; */
 }
 
 .sparks {
@@ -328,13 +306,17 @@
   position: fixed;
   inset: 0;
   display: grid;
-  /* grid-template-columns: 357px; */
+  grid-template-rows: 63px 38px;
   gap: 30px;
   background-color: var(--bg-color);
   border: var(--border);
-  padding: 32px 30px 32px;
-  /* inline-size: 357px;
-  block-size: 193px; */
+  padding: 30px;
+}
+
+@media (max-width: 376px) {
+  .dialog {
+    padding: 30px 40px;
+  }
 }
 
 .dialog .button__text {
@@ -354,9 +336,14 @@
 .dialog__container {
   display: grid;
   grid-template-columns: 39px 234px;
-  gap: 20px;
+  column-gap: 20px;
   align-items: center;
-  
+}
+
+@media (max-width: 376px) {
+  .dialog__container {
+    grid-template-columns: 39px 198px;
+  }
 }
 
 .dialog__text {
@@ -372,7 +359,7 @@
   justify-content: center;
   align-items: center;
   inline-size: 100%;
-  padding: 11px 0 11px;
+  block-size: 100%;
 }
 
 .brightness {
@@ -380,7 +367,7 @@
 }
 
 .contrast {
-  filter: contrast(20%);
+  filter: contrast(80%);
 }
 
 .blur {
@@ -388,7 +375,7 @@
 }
 
 .opacity {
-  filter: opacity(0.8);
+  filter: opacity(0.8) contrast(200%);
 }
 
 .grayscale {
@@ -396,7 +383,7 @@
 }
 
 .saturate {
-  filter: saturate(158%);
+  filter: saturate(300%);
 }
 
 .hue-rotate {
@@ -404,13 +391,9 @@
 }
 
 .sepia {
-  filter: sepia(80%) invert(0.7);
+  filter: sepia(100%);
 }
 
-.image {
+.invert {
   filter: invert(0.7);
-} 
-
-.image {
-  filter: drop-shadow(5px 15px 3px rgba(0, 0, 0, 0.8));
 }
