--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,5 +1,3 @@
-/* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
-
 :root {
   --font-family-main: "Inter";
   --font-family-accent: "PressStart2P";
@@ -17,5 +15,6 @@
   --border: 2px solid #000;
   --color-accent: #000;
   --text-contour: #fff;
+  --label-contour: #fff;
   --color-liked: #FF0000;
 }
