--- a/styles/variables.css
+++ b/styles/variables.css
@@ -16,5 +16,5 @@
   --color-accent: #000;
   --text-contour: #fff;
   --label-contour: #fff;
-  --color-liked: #FF0000;
+  --color-liked: #ff0000;
 }
